# telepass

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  cspell.json  docker-compose.local.yml  docker-compose.yml  example.env  lints.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/actions/install-protoc/: action.yml
.github/workflows/: deploy.yml  on-push.yml  security-audit.yml
crypto/: Cargo.toml
crypto/src/: lib.rs
data_model/: Cargo.toml
data_model/src/: lib.rs
db_service/: .env  Cargo.toml  Dockerfile  build.rs  docker-compose.dev.yml  docker-compose.yml
db_service/src/: main.rs  models.rs  schema.rs  service.rs
password_storage/: .env  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.dev.no-tls.yml  docker-compose.dev.tls.yml  docker-compose.dev.yml  docker-compose.healthcheck-telegram-gate.yml  docker-compose.mac-silicon.yml  docker-compose.override.yml  docker-compose.yml
password_storage/migrations/2023-02-23-185718_create_passwords/: up.sql
password_storage/src/: grpc.rs  lib.rs  main.rs  models.rs  schema.rs  service.rs
password_storage/src/service/: cache.rs
password_storage/src/service/cache/: last_seen.rs  rated.rs
proto/: db_service.proto  password_storage.proto
scripts/: gen_certs.sh
telegram_gate/: .env  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.depends-on-password-storage.yml  docker-compose.dev.no-tls.yml  docker-compose.dev.tls.yml  docker-compose.dev.yml  docker-compose.mac-silicon.yml  docker-compose.override.yml  docker-compose.yml  expansion.rs
telegram_gate/src/: bot.rs  button.rs  command.rs  context.rs  grpc.rs  lib.rs  main.rs  message.rs  mock_bot.rs  state.rs  test_utils.rs  transition.rs
telegram_gate/src/state/: authorized.rs  default.rs  delete_confirmation.rs  main_menu.rs  resource_actions.rs  resources_list.rs  test_utils.rs  unauthorized.rs
telegram_gate/src/test_utils/: mock_bot.rs
web_app/: Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  index.html  nginx.conf  sws.toml
web_app/.cargo/: config.toml
web_app/src/: components.rs  main.rs  tg_api.rs
web_app/src/components/: common.rs  show.rs  submit.rs
