[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Daniil Polyakov <arjentix@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/arjentix/telepass"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenvy = "0.15.6"
color-eyre = "0.6.2"
thiserror = "1.0.38"
tonic = "0.9.2"
tonic-build = "0.9.2"
prost = "0.11.6"
mockall = { version = "0.11.4", features = ["nightly"] }
mockall_double = "0.3.0"

[workspace]
resolver = "2"
members = ["password_storage", "telegram_gate"]
