[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Daniil Polyakov <arjentix@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/arjentix/telepass"
readme = "README.md"

[workspace]
resolver = "2"
members = ["password_storage", "telegram_gate", "web_app"]

[workspace.dependencies]
tokio = { version = "1.27.0", default-features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenvy = "0.15.6"
color-eyre = "0.6.2"
thiserror = "1.0.38"
tonic = "0.10.2"
tonic-build = "0.10.2"
tonic-reflection = "0.10.2"
prost = "0.12.1"
cfg-if = "1.0.0"
mockall = { version = "0.11.4", features = ["nightly"] }
mockall_double = "0.3.0"

[workspace.lints]
clippy.all = { level = "deny", priority = -1 }
clippy.pedantic = { level = "deny", priority = -1 }
clippy.restriction = { level = "deny", priority = -1 }
clippy.cargo = { level = "deny", priority = -1 }
clippy.nursery = "deny"

clippy.blanket-clippy-restriction-lints = "allow"
clippy.implicit-return = "allow"
clippy.self-named-module-files = "allow"
clippy.exhaustive-structs = "allow"
clippy.wildcard-imports = "allow"
clippy.shadow-reuse = "allow"
clippy.std-instead-of-core = "allow"
clippy.std-instead-of-alloc = "allow"
clippy.missing-trait-methods = "allow"
clippy.pub-use = "allow"
clippy.single-match-else = "allow"
clippy.separated-literal-suffix = "allow"
clippy.semicolon-outside-block = "allow"
clippy.question-mark-used = "allow"
clippy.unreachable = "allow"
clippy.exhaustive-enums = "allow"
clippy.partial-pub-fields = "allow"
clippy.semicolon-if-nothing-returned = "allow"
clippy.missing-inline-in-public-items = "allow"
clippy.pub-with-shorthand = "allow"
clippy.absolute-paths = "allow"
clippy.min-ident-chars = "allow"
clippy.error-impl-error = "allow"
clippy.single-call-fn = "allow"
clippy.multiple-unsafe-ops-per-block = "allow" # Triggers on `await`

# Triggered by dependencies so I can't really do anything with that
clippy.multiple-crate-versions = "allow"
