[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Daniil Polyakov <arjentix@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/arjentix/telepass"
readme = "README.md"

[workspace]
resolver = "2"
members = ["data_model", "crypto", "password_storage", "telegram_gate", "web_app"]

[workspace.dependencies]
telepass_data_model = { path = "data_model" }
telepass_crypto = { path = "crypto", default-features = false }

tokio = { version = "1.39.2", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
serde = "1.0.0"
serde_json = "1.0.0"
color-eyre = "0.6.3"
thiserror = "1.0.63"
displaydoc = "0.2.5"
tonic = "0.12.1"
tonic-build = "0.12.1"
tonic-reflection = "0.12.1"
tonic-health = "0.12.1"
prost = "0.13.1"
cfg-if = "1.0.0"
mockall = { version = "0.13.0", features = ["nightly"] }
mockall_double = "0.3.1"
base64 = "0.22.1"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints]
clippy.all = { level = "deny", priority = -1 }
clippy.pedantic = { level = "deny", priority = -1 }
clippy.restriction = { level = "deny", priority = -1 }
clippy.cargo = { level = "deny", priority = -1 }
clippy.nursery = { level = "deny", priority = -1 }
clippy.complexity = { level = "deny", priority = -1 }
clippy.correctness = { level = "deny", priority = -1 }
clippy.perf = { level = "deny", priority = -1 }
clippy.suspicious = { level = "deny", priority = -1 }
clippy.style = { level = "deny", priority = -1 }

clippy.cfg_not_test = "allow"
clippy.blanket-clippy-restriction-lints = "allow"
clippy.implicit-return = "allow"
clippy.self-named-module-files = "allow"
clippy.exhaustive-structs = "allow"
clippy.wildcard-imports = "allow"
clippy.shadow-reuse = "allow"
clippy.std-instead-of-core = "allow"
clippy.std-instead-of-alloc = "allow"
clippy.missing-trait-methods = "allow"
clippy.pub-use = "allow"
clippy.single-match-else = "allow"
clippy.separated-literal-suffix = "allow"
clippy.semicolon-outside-block = "allow"
clippy.question-mark-used = "allow"
clippy.unreachable = "allow"
clippy.exhaustive-enums = "allow"
clippy.partial-pub-fields = "allow"
clippy.semicolon-if-nothing-returned = "allow"
clippy.missing-inline-in-public-items = "allow"
clippy.pub-with-shorthand = "allow"
clippy.absolute-paths = "allow"
clippy.min-ident-chars = "allow"
clippy.error-impl-error = "allow"
clippy.single-call-fn = "allow"
clippy.impl-trait-in-params = "allow"
clippy.no-effect-underscore-binding = "allow"
clippy.module-name-repetitions = "allow"
clippy.renamed-function-params = "allow" # I failed to configure it properly
clippy.multiple-unsafe-ops-per-block = "allow" # Triggers on `await`

# Triggered by dependencies so I can't really do anything with that
clippy.multiple-crate-versions = "allow"
