[package]
name = "telepass_crypto"
description = "Telepass data model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["telepass", "telegram", "crypto"]
categories = ["crypto"]

[features]
default = ["impls"]
# Enables actual implementation of crypto functions.
# If not enabled then only data structures will be available.
impls = ["dep:aes-gcm", "dep:pbkdf2", "dep:sha2"]

[lints]
workspace = true

[dependencies]
aes-gcm = { version = "0.10.3", optional = true }
pbkdf2 = { version = "0.12.2", features = ["std", "parallel", "hmac"], optional = true }
sha2 = { version = "0.10.8", optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
