[package]
name = "telepass_data_model"
description = "Telepass data model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["telepass", "telegram", "model"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
telepass_crypto = { workspace = true, default-features = false }
serde.workspace = true
