[package]
name = "telepass_db_service"
version = "0.1.0"
edition = "2021"
description = "Database service for Telepass"
authors = ["Daniil Polyakov <arjentix@gmail.com>"]
license = "MIT"
repository = "https://github.com/arjentix/telepass"
readme = "README.md"
keywords = ["telepass", "password", "database"]
categories = ["database"]

[features]
development = ["reflection"] # For development purposes only
reflection = ["tonic-reflection"] # Activate gRPC reflection

[dependencies]
color-eyre = "0.6.2"
prost = "0.11.6"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
tonic = { version = "0.8.3", features = ["default", "tls"] }
tonic-reflection = { version = "0.6.0", optional = true }

[build-dependencies]
color-eyre = "0.6.2"
tonic-build = "0.8.4"
