[package]
name = "telepass_db_service"
version = "0.1.0"
edition = "2021"
description = "Database service for Telepass"
authors = ["Daniil Polyakov <arjentix@gmail.com>"]
license = "MIT"
repository = "https://github.com/arjentix/telepass"
readme = "README.md"
keywords = ["telepass", "password", "database"]
categories = ["database"]

[features]
default = ["tls"] # Production-ready features
tls = ["tonic/tls"] # Enable TLS certificate and Client Authentication

development = ["reflection"] # For development purposes only
reflection = ["tonic-reflection"] # Activate gRPC reflection

[dependencies]
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
tonic = "0.8.3"
tonic-reflection = { version = "0.6.0", optional = true }
prost = "0.11.6"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenvy = "0.15.6"
color-eyre = "0.6.2"
thiserror = "1.0.38"

[build-dependencies]
color-eyre = "0.6.2"
tonic-build = "0.8.4"
