[package]
name = "telepass_password_storage"
description = "Database service for Telepass"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["telepass", "password", "database"]
categories = ["database"]

[features]
default = ["tls"] # Production-ready features
tls = ["tonic/tls"] # Enable TLS certificate and Client Authentication

development = ["reflection"] # For development purposes only
reflection = ["tonic-reflection"] # Activate gRPC reflection

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
color-eyre.workspace = true
thiserror.workspace = true
tonic.workspace = true
prost.workspace = true # tonic requirement

tonic-reflection = { version = "0.9.2", optional = true }
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
ctrlc = { version = "3.2.5", features = ["termination"] }

[build-dependencies]
color-eyre.workspace = true
tonic-build.workspace = true
