[package]
name = "telepass_password_storage"
description = "Database service for Telepass"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["telepass", "password", "database"]
categories = ["database"]

[features]
default = ["tls"] # Production-ready features
tls = ["tonic/tls-ring"] # Enable TLS certificate and Client Authentication
development = ["reflection"] # For development purposes only
reflection = ["dep:tonic-reflection"] # Activate gRPC reflection
# This feature is required to build the executable and contains all the dependencies needed to build the binary
executable = ["dep:tracing-subscriber", "dep:dotenvy", "dep:ctrlc", "tokio/rt-multi-thread", "tokio/macros", "dep:tonic-health"]

[lib]
name = "telepass_password_storage"

[[bin]]
name = "telepass_password_storage"
required-features = ["executable"]

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
color-eyre.workspace = true
thiserror.workspace = true
tonic.workspace = true
tonic-health = { workspace = true, optional = true }
tonic-reflection = { workspace = true, optional = true }
tonic-prost.workspace = true
prost.workspace = true

diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
ctrlc = { version = "3.4.4", features = ["termination"], optional = true }

[build-dependencies]
color-eyre.workspace = true
tonic-prost-build.workspace = true
