[package]
name = "telepass_telegram_gate"
description = "Telegram Gateway for Telepass"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["telepass", "telegram"]
categories = ["gateway"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
color-eyre.workspace = true
thiserror.workspace = true

teloxide = { version = "0.12.2", features = ["macros"] }
derive_more = "0.99.17"
url = "2.3.1"
eyre = "0.6.8"
async-trait = "0.1.68"
