[package]
name = "telepass_telegram_gate"
description = "Telegram Gateway for Telepass"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["telepass", "telegram"]
categories = ["gateway"]

[features]
default = ["tls"] # Production-ready features
tls = ["tonic/tls"] # Enable TLS Client Authentication when connecting to password_storage


[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
color-eyre.workspace = true
thiserror.workspace = true
tonic.workspace = true
prost.workspace = true # tonic requirement

teloxide = { version = "0.12.2", features = ["macros"] }
derive_more = "0.99.17"
url = "2.3.1"
async-trait = "0.1.68"

[build-dependencies]
color-eyre.workspace = true
tonic-build.workspace = true
