[package]
name = "telepass_telegram_gate"
description = "Telegram Gateway for Telepass"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["telepass", "telegram"]
categories = ["gateway"]

[features]
default = ["tls"] # Production-ready features
tls = ["tonic/tls"] # Enable TLS Client Authentication when connecting to password_storage
# This feature is required to build the executable and contains all the dependencies needed to build the binary
executable = ["dep:tracing-subscriber", "dep:dotenvy", "tokio/rt-multi-thread", "tokio/macros", "teloxide/default"]

[lib]
name = "telepass_telegram_gate"

[[bin]]
name = "telepass_telegram_gate"
required-features = ["executable"]

[lints]
workspace = true

[dependencies]
telepass_data_model.workspace = true
tokio = { workspace = true, features = ['sync'] }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
color-eyre.workspace = true
thiserror.workspace = true
tonic.workspace = true
prost.workspace = true # tonic requirement
cfg-if.workspace = true
mockall_double.workspace = true
serde_json.workspace = true

teloxide = { version = "0.12.2", default-features = false, features = ["macros"] }
derive_more = "0.99.17"
url = "2.3.1"
async-trait = "0.1.68"
parse-display = "0.8.2"
drop_bomb = "0.1.5"

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ['rt', 'macros'] }

[build-dependencies]
color-eyre.workspace = true
tonic-build.workspace = true
