[package]
name = "telepass_web_app"
description = "A web app for Telepass"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["telepass", "telegram", "web-app"]
categories = ["gui", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
telepass_data_model.workspace = true
telepass_crypto.workspace = true

leptos = { version = "0.5.1", features = ["csr", "nightly"] }
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
web-sys = "0.3.66"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
displaydoc.workspace = true
