[package]
name = "telepass_web_app"
description = "A web app for Telepass"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["telepass", "telegram", "web-app"]
categories = ["gui", "wasm"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
telepass_data_model.workspace = true
telepass_crypto = { workspace = true, default-features = true }

leptos = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.9", features = ["csr"] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"
web-sys = { version = "0.3.70", features = ["Window", "Navigator", "Clipboard"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
displaydoc.workspace = true
