[package]
name = "telepass_web_app"
description = "A web app for Telepass"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["telepass", "telegram", "web-app"]
categories = ["gui", "wasm"]

[lints]
workspace = true

[dependencies]
telepass_data_model.workspace = true
telepass_crypto = { workspace = true, default-features = true }

leptos = { version = "0.8.5", features = ["csr"] }
leptos_router = { version = "0.8.5" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["Window", "Navigator", "Clipboard"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
displaydoc.workspace = true
getrandom = { version = "0.2.16", features = ["js"] } # required by telepass_crypto's aes-gcm dependency,
